unpackaged/main/default/objects/Marketing_Project_Stage__c/Marketing_Project_Stage__c.object-meta.xml
<CustomObject>
    <label>Marketing Project Stage</label>
    <nameField>
        <label>Marketing Project Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Project Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>