unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Campaign_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Tactic__c</fullName>
    <description>Tactic type of Marketing Project record</description>
    <label>Campaign Tactic</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>