unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Marketing_Project_Request__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Project_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Marketing Request</label>
    <referenceTo>Request_Forms__c</referenceTo>
    <relationshipLabel>Marketing Project Stages</relationshipLabel>
    <relationshipName>Marketing_Project_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>