unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/ROI_Tactic__c.field-meta.xml
<CustomField>
    <fullName>ROI_Tactic__c</fullName>
    <description>THis is used to match the project to a campaign created by ROI - THIS IS TO LIKELY BE REPLACED WITH MARKETO - AT THAT TIME DELETE THIS FIELD</description>
    <inlineHelpText>This is used to match the project to a campaign created by ROI</inlineHelpText>
    <label>ROI Tactic ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>