unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Stage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Stage_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Complete?</label>
    <type>Checkbox</type>
</CustomField>