unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Stage_LOE__c.field-meta.xml
<CustomField>
    <fullName>Stage_LOE__c</fullName>
    <label>Stage LOE</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>