unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Stage_Start__c.field-meta.xml
<CustomField>
    <fullName>Stage_Start__c</fullName>
    <label>Stage Start</label>
    <type>Date</type>
</CustomField>