unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Stage_Type__c.field-meta.xml
<CustomField>
    <fullName>Stage_Type__c</fullName>
    <description>Used for Marketing Project Stage Creation flow to identify type of stage</description>
    <label>Stage Type</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>