unpackaged/main/default/objects/Marketing_Project_Stage__c/fields/Total_Task_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Task_Duration__c</fullName>
    <description>RU Helper aggregation field to calculate total duration of tasks associated to this Stage</description>
    <label>Total Task Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>