unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/ANALYSIS.recordType-meta.xml
<RecordType>
    <fullName>ANALYSIS</fullName>
    <active>true</active>
    <label>ANALYSIS</label>
</RecordType>