unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/COMPLETE.recordType-meta.xml
<RecordType>
    <fullName>COMPLETE</fullName>
    <active>true</active>
    <label>COMPLETE</label>
</RecordType>