unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/COPY.recordType-meta.xml
<RecordType>
    <fullName>COPY</fullName>
    <active>true</active>
    <label>COPY</label>
</RecordType>