unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/DEPLOY.recordType-meta.xml
<RecordType>
    <fullName>DEPLOY</fullName>
    <active>true</active>
    <label>DEPLOY</label>
</RecordType>