unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/DESIGN.recordType-meta.xml
<RecordType>
    <fullName>DESIGN</fullName>
    <active>true</active>
    <label>DESIGN</label>
</RecordType>