unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/LOGISTICS.recordType-meta.xml
<RecordType>
    <fullName>LOGISTICS</fullName>
    <active>true</active>
    <label>LOGISTICS</label>
</RecordType>