unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/MONITORING.recordType-meta.xml
<RecordType>
    <fullName>MONITORING</fullName>
    <active>true</active>
    <label>MONITORING</label>
</RecordType>