unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/PRODUCTION.recordType-meta.xml
<RecordType>
    <fullName>PRODUCTION</fullName>
    <active>true</active>
    <label>PRODUCTION</label>
</RecordType>