unpackaged/main/default/objects/Marketing_Project_Stage__c/recordTypes/TRAVEL.recordType-meta.xml
<RecordType>
    <fullName>TRAVEL</fullName>
    <active>true</active>
    <label>TRAVEL</label>
</RecordType>